[tool.poetry]
name = "ugoki"
version = "0.1.0"
description = "API Server to serve random gifs with support for public suggestions"
authors = ["Ceda EI <ceda_ei@webionite.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
